ntl-11.4.3/src/CheckFeatures.log
*** CheckFeatures log ***
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native -o TestGetTime TestGetTime.cpp GetTime1.cpp -lm
running
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native -o TestGetPID TestGetPID.cpp GetPID1.cpp -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckALIGNED_ARRAY.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckBUILTIN_CLZL.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckLL_TYPE.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckSSSE3.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckAVX.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckPCLMUL.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckAVX2.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckFMA.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckAVX512F.cpp -o CheckFeatures -lm
CheckAVX512F.cpp:12:2: error: "AVX512F not supported"
#error "AVX512F not supported"
 ^
CheckAVX512F.cpp:16:2: error: "AVX512F not supported"
#error "AVX512F not supported"
 ^
2 errors generated.
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckCOPY_TRAITS1.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckCOPY_TRAITS2.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckCHRONO_TIME.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckMACOS_TIME.cpp -o CheckFeatures -lm
g++ -I../include -I. -g -O2 -std=c++11 -pthread -march=native CheckPOSIX_TIME.cpp -o CheckFeatures -lm
CheckPOSIX_TIME.cpp:36:15: error: use of undeclared identifier '_ntl_GetWallTime'
   double t = _ntl_GetWallTime();
              ^
CheckPOSIX_TIME.cpp:37:11: error: use of undeclared identifier 'retval'
   return retval;
          ^
2 errors generated.
